package ch.heimag.datenanalysetool.country


object FileReader {

    val country = Country()

}