@startuml
!pragma layout smetana
hide circle
skinparam classAttributeIconSize 0

title Class diagram Datenanalysetool


package ch.heimag.datenanalysetool.conditions {
    class OperatingConditions(Int,Int,String)
}

package ch.heimag.datenanalysetool.converter{
    class Converter {
        + databaseDateStringToInt(String): Int
        + intToString(Int): String
        + dateStringToInt(String): Int
    }
}

package ch.heimag.datenanalysetool.country {
    class FileReader{
        + country
    }

    class Country{
        -  logger
        + MutableList<String> loadToSelectCountry(String)
    }
}

package ch.heimag.datenanalysetool.databases {
    class DataPoint(String,String){}

     class Database {
        + PROTOCOL
        + HOST
        + PORT
        + DATABASE
        + OPTIONS
        + URL
        + USER
        + PASSWORD
        - logger
        + checkDatabaseStatus(): String
        + loadLatestDate(): String
        + loadOperatingStateKaltePeriode(OperatingConditions): MutableList<DataPoint>
        + loadOperatingStateHaupanteilHeizperiode(OperatingConditions): MutableList<DataPoint>
        + loadOperatingStateSchwachlast(OperatingConditions): MutableList<DataPoint>
        + setWeatherdataToDatabase(MutableList<WeatherData>)
    }

    class Data {
        - logger
        + database
        + databaseStatus(): String
        + loadLatestDate(): String
        + loadOperatingStateKaltePeriode(OperatingConditions): MutableList<DataPoint>
        + loadOperatingStateHaupanteilHeizperiode(OperatingConditions): MutableList<DataPoint>
        + loadOperatingStateSchwachlast(void,OperatingConditions): MutableList<DataPoint>
        + setWeatherdataToDatabase(MutableList<WeatherData>):String
    }

    interface DatabaseInfo {
        + PROTOCOL: String
        + HOST: String
        + PORT: Int
        + DATABASE: String
        + OPTIONS: String
        + URL: String
        + USER: String
        + PASSWORD: String
    }

    DatabaseInfo <|.. Database
}

package ch.heimag.datenanalysetool.plugins{
    class UserSession(String) {
    }

    class LoginModel(String,String,String) {
    }

    interface Principal{
    }

    Principal <|..UserSession
}

package ch.heimag.datenanalysetool.routes{
    class FirstResponseDatenanalyseView {
    }

    class FirstResponseSettingsView {
    }

    class OperatingStateValueList {
    }

    class UserInfo {
    }
}

package ch.heimag.datenanalysetool.services{
    class AuthenticationService {
          -  logger
          -  digestFunction
          -  usernameToPasswordMap
          + UserIdPrincipal? authenticate(UserPasswordCredential)
    }
}

package ch.heimag.datenanalysetool.weatherdata{
    class Weatherdata(Int?,Double?*29)
}

@enduml